<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:background="@android:color/darker_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
	    android:id="@+id/muses_spinner"
	    android:layout_width="match_parent"
	    android:layout_height="60dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/refresh"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/refresh" />
	    <Button
	        android:id="@+id/connect"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:text="@string/connect" />
	    <Button
	        android:id="@+id/disconnect"
	        android:layout_width="120dp"
	        android:layout_height="40dp"
	        android:text="@string/disconnect" />
	</LinearLayout>
	<TextView
   		android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_weight="1"
    	android:textSize="16sp"
    	android:text="@string/status" />
  	<TextView
    	android:id="@+id/con_status"
   		android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_weight="1"
    	android:textSize="16sp"
    	android:text="@string/undefined" />

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

	</LinearLayout>

	<TextView
	   		android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:textSize="16sp"
	    	android:text="@string/version" />

	<TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:textSize="16sp"
     android:text="@string/undefined" />

	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="45dp"
	        android:orientation="horizontal" >
	        <Button
	            android:id="@+id/pause"
	            android:layout_width="150dp"
	            android:layout_height="40dp"
	            android:text="@string/pause" />
		</LinearLayout>

</LinearLayout>