<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:screenOrientation="portrait">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapActivity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:layout="@layout/drawer_view"
            android:visibility="invisible" />

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:text="Stay Woke"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/color_bg_light_pink"
                android:textSize="60sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:visibility="visible"
                app:fontFamily="@font/montserrat"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <Spinner
            android:id="@+id/muses_spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="158dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/muses_spinner"
            android:orientation="horizontal"
            android:id="@+id/connection_btns">

            <Button
                android:id="@+id/refresh"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/refresh" />

            <Button
                android:id="@+id/connect"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/connect" />

            <Button
                android:id="@+id/disconnect"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/disconnect" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/connection_btns"
            android:orientation="horizontal"
            android:id="@+id/status_lay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="Connection Status:"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/con_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/undefined"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/status_lay"
            android:orientation="vertical"
            android:id="@+id/rest_lay">

            <Button
                android:id="@+id/stops_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Find Nearby Rest Stops" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/rest_lay"
            android:orientation="vertical">
            <Button
            android:id="@+id/pause"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/pause" />

            <TextView
            android:id="@+id/textViewJawClench"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

            <TextView
            android:id="@+id/textViewBlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
        </LinearLayout>

    </RelativeLayout>

    <!--&lt;!&ndash; Container for contents of drawer - use NavigationView to make configuration easier &ndash;&gt;-->
    <!--<ListView-->
        <!--android:id="@+id/nav_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:fitsSystemWindows="true"-->
        <!--app:layout="@layout/drawer_view" -->
        <!--android:visibility="invisible"/>-->


    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<Spinner-->
            <!--android:id="@+id/muses_spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="60dp" />-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="45dp"-->
            <!--android:orientation="horizontal" >-->
            <!--<Button-->
                <!--android:id="@+id/refresh"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:text="@string/refresh" />-->

            <!--<Button-->
                <!--android:id="@+id/connect"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:text="@string/connect" />-->

            <!--<Button-->
                <!--android:id="@+id/disconnect"-->
                <!--android:layout_width="120dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:text="@string/disconnect" />-->
        <!--</LinearLayout>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/status"-->
            <!--android:textSize="16sp" />-->

        <!--<TextView-->
            <!--android:id="@+id/con_status"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/undefined"-->
            <!--android:textSize="16sp" />-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textSize="16sp"-->
            <!--android:text="@string/version"-->
            <!--android:visibility="invisible"/>-->

        <!--<Button-->
            <!--android:id="@+id/stops_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Find Nearby Rest Stops" />-->

        <!--<TextView-->
            <!--android:id="@+id/version"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textSize="16sp"-->
            <!--android:text="@string/undefined"-->
            <!--android:visibility="invisible"/>-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="45dp"-->
            <!--android:orientation="horizontal" >-->
            <!--<Button-->
                <!--android:id="@+id/pause"-->
                <!--android:layout_width="150dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:text="@string/pause" />-->

            <!--<TextView-->
                <!--android:id="@+id/textViewJawClench"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="TextView" />-->

            <!--<TextView-->
                <!--android:id="@+id/textViewBlink"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="TextView" />-->
        <!--</LinearLayout>-->
    <!--</LinearLayout>-->

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--&gt;-->

        <!--<TextView-->
            <!--android:id="@+id/wakeup_txt"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignTop="@+id/awake_txt"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:text="Wake Up"-->
            <!--android:textAllCaps="false"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Display1"-->
            <!--android:textColor="@color/color_red"-->
            <!--android:textSize="60sp"-->
            <!--android:textStyle="bold"-->
            <!--android:typeface="serif"-->
            <!--android:visibility="visible"-->
            <!--app:fontFamily="@font/montserrat"-->
            <!--app:layout_constraintTop_toTopOf="parent" />-->

        <!--<TextView-->
            <!--android:id="@+id/awake_txt"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="false"-->
            <!--android:layout_alignParentLeft="false"-->
            <!--android:layout_alignParentRight="false"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignWithParentIfMissing="true"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_marginTop="64dp"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:text="Awake"-->
            <!--android:textAllCaps="false"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Display1"-->
            <!--android:textColor="@color/color_bg_light_pink"-->
            <!--android:textSize="60sp"-->
            <!--android:textStyle="bold"-->
            <!--android:typeface="serif"-->
            <!--android:visibility="visible"-->
            <!--app:fontFamily="@font/montserrat"-->
            <!--app:layout_constraintTop_toTopOf="parent" />-->

        <!--<Button-->
            <!--android:id="@+id/stops_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginBottom="79dp"-->
            <!--android:text="Find Nearby Rest Stops" />-->

        <!--<Button-->
            <!--android:id="@+id/connectBtn"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginBottom="149dp"-->
            <!--android:text="Connect Headset" />-->

    <!--</RelativeLayout>-->

</android.support.v4.widget.DrawerLayout>

